2006-09-11  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed the signal documentation of the TnyFolder, TnyAccountStore and
	TnyDevice interfaces
	* Improved the documentation generation
	* Small fixes for the signals of above types
	* From now on will --enable-gtk-doc require --enable-tests too
	* Fixed the Python binding's get_folders_async of TnyFolderStore
	* Fixed a reference counting problem on TnyList::copy

	* This was a major API change in libtinymail

2006-09-08  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed the Python bindings
	* Fixed the TnyIterator API (current -> get_current, as it's a
	property like any other property)
	* Added lots of samples to the API reference documentation

	* This was a major API change in all libraries
	
2006-09-06  Philip Van Hoof <pvanhoof@gnome.org>

	* The big commit we have all been waiting for: Removing the Iface
	suffix from the interface types
	* This was a huge API change

	* This was a major API change in all libraries

2006-09-05  Philip Van Hoof <pvanhoof@gnome.org>

	* Renamed TnyList to TnySimpleList
	* Renamed TnySummaryView to TnyDemouiSummaryView
	* Bugfix in tny-gtk-header-list-model.c

	* This was a major API change in all libraries

2006-09-04  Philip Van Hoof <pvanhoof@gnome.org>

	* Renamed the GPE types in libtinymail-gpe
	* Renamed the Maemo types in libtinymail-maemo
	* Renamed the OLPC types in libtinymail-olpc
	* Renamed the GNOME types in libtinymail-gnome-desktop

	* Made compilation of the demo-ui optional
	* Added some ifdefs to the demo-ui

	* This was a major API change in libtinymail-gpe, libtinymail-maemo,
	libtinymail-olpc and libtinymail-gnome

2006-09-04  Philip Van Hoof <pvanhoof@gnome.org>
	
	* Renamed TnyDevice of libtestshared to TnyTestDevice
	* Renamed TnyPlatformFactory of libtestshared to
	TnyTestPlatformFactory
	* Renamed TnyAccountStore of libtestshared to TnyTestAccountStore

	* This was a minor API change

2006-09-03  Philip Van Hoof <pvanhoof@gnome.org>
