@@ -2,7 +2,7 @@
 TnyGtkHeaderView
 
 <!-- ##### SECTION Short_Description ##### -->
-A a header view type for Gtk+
+A header view type for Gtk+
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
