@@ -290,9 +290,17 @@ tny_camel_store_account_remove_folder (TnyFolderStore *self, TnyFolder *folder)
 static void 
 tny_camel_store_account_remove_folder_default (TnyFolderStore *self, TnyFolder *folder)
 {
-	/* TODO */
-    
-       	g_critical ("TODO: The remove_folder method is unimplemented in this TnyFolderStore implementation (TnyStoreAccount)\n");
+	TnyCamelAccountPriv *apriv = TNY_CAMEL_ACCOUNT_GET_PRIVATE (self);
+	CamelException ex = CAMEL_EXCEPTION_INITIALISER;    
+	CamelStore *store = camel_session_get_store ((CamelSession*) apriv->session, 
+			apriv->url_string, &ex);
+	TnyCamelFolder *cfol = TNY_CAMEL_FOLDER (folder);
+	TnyCamelFolderPriv *cpriv = TNY_CAMEL_FOLDER_GET_PRIVATE (cfol);
+    	gchar *cfolname = cpriv->folder_name;
+
+	camel_store_delete_folder (store, cfolname, &ex);
+	
+	/* TODO: error handling using 'ex' */
 
 	return;
 }
@@ -307,11 +315,21 @@ tny_camel_store_account_create_folder (TnyFolderStore *self, const gchar *name)
 static TnyFolder*
 tny_camel_store_account_create_folder_default (TnyFolderStore *self, const gchar *name)
 {
-	/* TODO */
-    
-       	g_critical ("TODO: The create_folder method is unimplemented in this TnyFolderStore implementation (TnyStoreAccount)\n");
+	TnyCamelAccountPriv *apriv = TNY_CAMEL_ACCOUNT_GET_PRIVATE (self);
+	CamelException ex = CAMEL_EXCEPTION_INITIALISER;    
+	CamelStore *store = camel_session_get_store ((CamelSession*) apriv->session, 
+			apriv->url_string, &ex);
+	TnyFolder *folder = tny_camel_folder_new ();
+	CamelFolderInfo *info;
 
-	return TNY_FOLDER (tny_camel_folder_new ());
+	info = camel_store_create_folder (store, "/", name, &ex);
+    
+	_tny_camel_folder_set_id (TNY_CAMEL_FOLDER (folder), info->full_name);
+    	camel_store_free_folder_info (store, info);
+
+	/* TODO: Error handling using 'ex' */
+
+    	return folder;
 }
 
 static void
